--- a/functions/404.html
+++ b/functions/404.html
@@ -36,6 +36,9 @@
     <h1>404 - Page Not Found</h1>
     <p>Sorry, the page you are looking for does not exist.</p>
     <p>Please check if you have entered the correct URL.</p>
+    <footer style="margin-top: 50px; padding-top: 20px; border-top: 1px solid #ddd; font-size: 14px; color: #666;">
+        <a href="https://icp.gov.moe/?keyword=20260888" target="_blank">萌ICP备20260888号</a>
+    </footer>
 </body>
 
 </html>
