--- a/index.html
+++ b/index.html
@@ -217,7 +217,10 @@
       <button :class="{ loading }" :disabled="loading || isValidated()" @click="submit($refs, $nextTick)">生成</button>
     </main>
     <footer>
-     service
+      service
+      <div style="margin-top: 0.5rem;">
+        <a href="https://icp.gov.moe/?keyword=20260888" target="_blank">萌ICP备20260888号</a>
+      </div>
     </footer>
     <script src="asset/js/alpine.js"></script>
     <script>
